@@ -33,6 +33,7 @@ typedef enum {
     YELP_DOC_TYPE_DOCBOOK_XML,
     YELP_DOC_TYPE_DOCBOOK_SGML,
     YELP_DOC_TYPE_HTML,
+    YELP_DOC_TYPE_XHTML,
     YELP_DOC_TYPE_MAN,
     YELP_DOC_TYPE_INFO,
     YELP_DOC_TYPE_TOC,
